feat: security, login and register endpoints